main content conatainer, svg animation

--- a/src/css/partials/_variables.scss
+++ b/src/css/partials/_variables.scss
@@ -5,7 +5,9 @@ $theme: Null;
 // default color theme
 $primaryA: #63396e; /*rgb(99,57,110)*/
 $primaryB: #cd5c5c; /*rgb(205, 92, 92)*/
+$secondaryB: #380618;
 $btnBg: #B21551; /*rgb(178, 21, 81)*/
+
 
 // all themes color config
 $mainBg: #f2f2f2;
