--- a/src/css/components/_container.scss
+++ b/src/css/components/_container.scss
@@ -26,17 +26,21 @@
 	flex-flow: row nowrap;
 	justify-content: space-between;
 	align-items: center;
-	background: linear-gradient(to right, $primaryA  0%,  darken($primaryB,20%) 100%);
+	background: linear-gradient(to right, $primaryA 0%, darken($primaryB, 20%) 100%);
 	height: 100%;
-
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
 }
 
 .content-left, .content-right {
 	background-color: transparent;
 	height: 100%;
-	transform: scale(0);
+	transform: scale(2);
 	position: relative;
-	transition: all .8s linear;
+	transition: all .8s cubic-bezier(0, .24, .68, .98);
+
 }
 
 .content-left {
@@ -45,6 +49,7 @@
 
 .content-right {
 	width: 60%;
+	clip-path: circle(100% at 0% 50%);
 }
 
 .is-content-visible .content-left {
@@ -54,35 +59,25 @@
 .is-content-visible .content-right {
 	background-color: #380618;
 	transform: scale(1);
-	animation: Clipped  1s cubic-bezier(0, .24, .68, .98) 1s forwards 1;
-}
-
-@keyframes Clipped {
-	from {
-		clip-path: circle(100% at 0% 50%);
-	}
-
-	to {
-		clip-path: circle(93% at 0% 50%);
-	}
+	clip-path: circle(93% at 0% 50%);
 }
 
 .content-right-inner {
-    transform: translate3d(-100%, 0, 0);
-    opacity: 0;
-    transition: all .8s linear .5s;
-    position: relative;
+	transform: translate3d(-100%, 0, 0);
+	opacity: 0;
+	transition: all .8s linear .5s;
+	position: relative;
 }
 
 .content-left-inner {
-    transform: translate3d(100%, 0, 0);
-    opacity: 0;
-    transition: all .5s linear .5s;
-    position: relative;
+	transform: translate3d(100%, 0, 0);
+	opacity: 0;
+	transition: all .5s linear .5s;
+	position: relative;
 }
 
 .is-content-visible .content-right-inner,
 .is-content-visible .content-left-inner {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
+	transform: translate3d(0, 0, 0);
+	opacity: 1;
 }
