--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -5,11 +5,12 @@
 @import 'partials/base';
 @import 'components/header';
 @import 'components/form';
-@import 'components/_container';
-@import 'components/section-title';
 @import 'components/hero';
-@import 'components/section';
 @import 'components/button';
+@import 'components/container';
+@import 'components/content';
+@import 'components/section-title';
+@import 'components/venue';
 
 
 
