style, script changes

--- a/src/css/components/_content.scss
+++ b/src/css/components/_content.scss
@@ -1,61 +1,95 @@
 .content {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	align-items: center;
-	background: linear-gradient(to right, $primaryA 0%, darken($primaryB, 20%) 100%);
-	height: 100%;
+	// display: flex;
+	// flex-flow: row nowrap;
+	// justify-content: space-between;
+	// align-items: center;
+	background: linear-gradient(to bottom, $primaryA 0%, darken($primaryB, 20%) 100%);
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0;
 
+	@include mq(medium) {
+		background: linear-gradient(to right, $primaryA 0%, darken($primaryB, 20%) 100%);
+		height: 100%;
+	}
+
+
 	&-left {
-		background-color: transparent;
+		background: linear-gradient(to bottom, #873140 0%, #772838 100%);
+
 		height: 100%;
 		transform: scale(2.5);
 		position: relative;
-		transition: all .8s cubic-bezier(0, .24, .68, .98);
-		width: 40%;
+		transition: all .5s cubic-bezier(0, .24, .68, .98);
+		width: 0;
+		position: absolute;
+		top: 0;
+		right: 0;
+
+		@include mq(medium) {
+			background: none;
+			width: 40%;
+		}	
 
 	}
 
 	&-right {
-		background-color: transparent;
+		background: linear-gradient(to bottom, #692c4a 0%, #7a2835 100%);
 		height: 100%;
 		transform: scale(2.5);
 		position: relative;
-		transition: all .8s cubic-bezier(0, .24, .68, .98);
-		width: 60%;
-		clip-path: circle(100% at 0% 50%);
+		transition: all .5s cubic-bezier(0, .24, .68, .98);
+		width: 100%;
 
+		position: absolute;
+		top: 0;
+		left: 0;
+
+		@include mq(medium) {
+			width: 60%;
+			clip-path: circle(100% at 0% 50%);
+			clip-path: ellipse(100% 65% at 0% 50%);
+		}
 
 	}
 
 	&-left-inner {
 		transform: translate3d(100%, 0, 0);
 		opacity: 0;
-		transition: all .5s linear .5s;
+		transition: all .5s linear .3s;
 		position: relative;
 	}
 
 	&-right-inner {
 		transform: translate3d(-100%, 0, 0);
 		opacity: 0;
-		transition: all .8s linear .5s;
+		height: 100%;
+		transition: all .8s linear .3s;
 		position: relative;
 	}
 	
 
 	&.is-content-visible {
-		.content-left {
-			transform: scale(1);
+		.btn-expand {
+			transform: translate3d(0,0,0);
+			transition: all .8s linear .8s;
 		}
 
-		.content-right {
-			background-color: $secondaryB;
+		.content-left {
 			transform: scale(1);
-			clip-path: circle(97% at 0% 50%);
+
+		}
+
+		.content-right {    
+			background-color: transparentize($secondaryB, .8);
+			transform: scale(1);
+
+
+			@include mq(medium) {
+				clip-path: ellipse(100% 65% at 0% 50%);
+			}
+
 		}
 
 		.content-left-inner,
@@ -68,14 +102,86 @@
 
 	&.content--expanded {
 		.content-right {
-			width: 100%;
-			clip-path: circle(120% at 0% 50%);
+			width: 0%;
+
+			@include mq(medium) {
+				width: 80%;
+				clip-path: ellipse(100% 75% at 0% 50%);
+			}
+
 		}
 
 		.content-left {
-			width: 0%;
+			width: 100%;
+
+			@include mq(medium) {
+				background: none;
+				width: 20%;
+			}
 		}
 
+
+	}
+
+	h2 {
+		font-size: 22px;
+		line-height: 1.2;
+		padding: 5px;
+		font-family: 'Great Vibes', cursive;
+
+	}
+
+	h3, h2, p, span {
+		color: #eee;
+		font-size: 16px;
+		font-weight: 300;
+	}
+
+	p {
+		font-style: italic;
+	}
+
+	svg {
+		display: block;
+		width: 60px;
+		height: 60px;
+	}
+
+	.cloud-pair {
+		width: 120px;
+		height: 120px;
+	}
+
+	#cloud, #cloud-pair, #air-balloon {
+		opacity: 0;
+	}
+
+	#contentRightCanvas  {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		@include randomShapeSize2(cloud);
+		@include randomShapeSize2(cloud-pair);
+		@include randomShapeSize2(air-balloon);
+
+		@include randomPosition(cloud);
+		@include randomPosition(cloud-pair);
+		@include randomPosition(air-balloon);
+			
+	}
+
+	#contentLeftCanvas {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		margin-left: -5%;
+		@include randomShapeSize2(cloud);
+		@include randomShapeSize2(cloud-pair);
+		@include randomShapeSize2(air-balloon);
+
+		@include randomPosition(cloud);
+		@include randomPosition(cloud-pair);
+		@include randomPosition(air-balloon);
 
 	}
 }
