--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -6,8 +6,9 @@ header {
 	overflow: hidden;
 	height: 100vh;
 
-	@include mq(small) {
+	@include mq(medium) {
 		@include flex-row($justify-content: center);
 
 	}
+
 }
