--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -1,34 +1,23 @@
 .btn {
-    border-radius: 20px;
-    background: $btnBg;
+    border-radius: 20px;  
+    cursor: pointer; 
     font-family: $fontContent;
     font-size: 18px;
     font-weight: 600;
     letter-spacing: 0.5px;
     text-align: center;
-    text-transform: uppercase;
-    color: $titleColor;
+    text-transform: uppercase;  
     padding: 12px 30px;
     margin: 20px auto;
     display: inline-block;
     position: relative;
-    width: 140px;
     transition: transform ease-out .6s, background 1s;
 
-    span {
-        display: block;
-        transform: scale(1);
-        transition: transform ease-out .6s
-    }
-
     &::before {
-        background-image: url(../images/icons/search_48px.svg);
-        background-size: 32px;
+        @include pseudo;
         background-repeat: no-repeat;
         background-position: 50% 50%;
-        @include pseudo;
-        transform: scale(0);
-        opacity: 0;
+        background-size: 32px;
         transition: all .6s;
         z-index: -1;
     }
@@ -38,30 +27,134 @@
         border-radius: 20px;
         pointer-events: none;
         padding: 0;
-        box-shadow: 0 0 0 2px rgba($btnBg, .3);
         opacity: 0;
         transform: scale(0.6);
         z-index: -1;
     }
 
-    &:hover {
-        background: rgba($btnBg, .85);
-        transform: scale(0.97);
+    span {
+        display: block;
+        transform: scale(1);
+        transition: transform ease-out .6s
+    }
 
+    &:hover {
+        
         span {
             transform: scale(0);
             opacity: 0;
         }
 
+    }
+
+
+    &.btn-search {
+        background-color: $btnBg;
+        color: $titleColor;
+        width: 140px;
+
         &::before {
-            transform: scale(1);
-            opacity: 1;
+            background-image: url(../images/icons/search_48px.svg);
+            transform: scale(0);
+            opacity: 0;
+            
         }
 
         &::after {
-            animation: sonarEffect 1.3s cubic-bezier(.04, .47, .64, .96) .7s;
+            box-shadow: 0 0 0 2px rgba($btnBg, .3);
+        }
+
+        &:hover {
+            background: rgba($btnBg, .85);
+            transform: scale(0.97);
+
+            &::before {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            &::after {
+                animation: sonarEffect 1.3s cubic-bezier(.04, .47, .64, .96) .4s;
+            }
         }
     }
+
+    &.btn-expand {
+        background-color: rgba(255,255,255,.3);
+        display: block;
+        padding: 0;
+        position: fixed;
+        top: 50px;
+        left: 0px;
+        width: 42px;
+        height: 42px;
+        border-radius: 0 50% 50% 0;
+        transform: translate3d(-100%,0,0);
+        transition:  opacity .6s, background-color .3s ease-out, transform .6s ease-out;
+        z-index: 99;
+
+        @include mq(medium) {
+           top: 50%;
+           width: 60px;
+           height: 60px;
+           margin-top: -30px;
+        }
+
+        span {
+            display: block;
+            position: relative;
+            transform: scale3d(1,1,1) rotate(0deg);
+            transition: transform .6s ease-out;
+            width: 100%;
+            height: 100%;
+
+            svg {
+                margin: 0 auto;
+                width: 25px;
+                height: 42px;
+
+                @include mq(medium) {
+                    width: 36px;
+                    height: 60px;
+                }
+            }
+        } 
+
+        &::before {
+            background-image: url("../images/icons/arrow-b.svg");
+            transform: translate3d(-100%, 0,0) rotateX(180deg);
+            background-size: 25px;
+
+            @include mq(medium) {
+                background-size: 36px;
+            }
+        }
+
+        &::after {
+            border-radius: 0 50% 50% 0;
+            box-shadow: 0 0 0 2px rgba(255,255,255, .1);
+        }
+
+        &:hover {
+            background-color: $btnBg;
+            transform: scale(0.97);
+
+            span {
+               transform: scale3d(0,0,0) rotateX(180deg);
+            }
+
+            &::before {
+                 transform: translate3d(0,0,0) rotateX(0deg);
+
+            }
+
+            &::after {
+                animation: sonarEffect2 1.3s cubic-bezier(.04, .47, .64, .96) .4s;
+            }
+        }
+
+    }
+
 }
 
 @keyframes sonarEffect {
@@ -78,3 +171,20 @@
         opacity: 0;
     }
 }
+
+@keyframes sonarEffect2 {
+    0% {
+        opacity: 0.3;
+    }
+    40% {
+        opacity: 0.5;
+        box-shadow: 0 0 0 2px rgba(255,255,255, .2), 0 0 10px 10px rgba(255,255,255, .7), 0 0 0 10px rgba(255,255,255, .4);
+    }
+    100% {
+        box-shadow: 0 0 0 2px rgba(255,255,255, .2), 0 0 10px 10px rgba(255,255,255, .7), 0 0 0 10px rgba(255,255,255, .4);
+        transform: scale(1.3);
+        opacity: 0;
+        
+    }
+}
+
