--- a/src/css/components/_container.scss
+++ b/src/css/components/_container.scss
@@ -1,11 +1,18 @@
 .svg-clipped {
 	width: 100vw;
 	height: 100vh;
-	background-color: rgba(0,0,0,0.3);
-		-webkit-clip-path: url(#svgPath);
-		clip-path: url(#svgPath);
+	width: 100%;
+	height: 100%;
+	background: rgba(255,255,255,0.5);
+	background: repeating-radial-gradient( circle at 0% 50%, #932e30, #932e30 2px, #783453 0px, #783453 50px);
+	-webkit-clip-path: url(#svgPath);
+	clip-path: url(#svgPath);
+
+	@include mq(medium) {
+		background: repeating-radial-gradient( circle at 0% 100%, #932e30, #932e30 2px, #783453 0px, #783453 100px);
 
 	}
+}
 
 .container {
 	margin: auto;
@@ -15,69 +22,24 @@
 	top:0;
 	left: 0;
 	width: 100%;
-	height: 100vh;
-	overflow: hidden;
+	height: 100%;
+	height: 1700px;
+	overflow: hidden;	
 	transition: opacity .4s ease-out;
 
-}
+	@include mq(xsmall) {
+		height: 1050px;
+	}
+	
+	@include mq(medium) {
+		height: 2300px;
+	}
 
-.content {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	align-items: center;
-	background: linear-gradient(to right, $primaryA 0%, darken($primaryB, 20%) 100%);
-	height: 100%;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-}
+	@include mq(large) {
+		height: 1200px;
+	}
+	
 
-.content-left, .content-right {
-	background-color: transparent;
-	height: 100%;
-	transform: scale(2);
-	position: relative;
-	transition: all .8s cubic-bezier(0, .24, .68, .98);
 
 }
 
-.content-left {
-	width: 40%;
-}
-
-.content-right {
-	width: 60%;
-	clip-path: circle(100% at 0% 50%);
-}
-
-.is-content-visible .content-left {
-	transform: scale(1);
-}
-
-.is-content-visible .content-right {
-	background-color: #380618;
-	transform: scale(1);
-	clip-path: circle(93% at 0% 50%);
-}
-
-.content-right-inner {
-	transform: translate3d(-100%, 0, 0);
-	opacity: 0;
-	transition: all .8s linear .5s;
-	position: relative;
-}
-
-.content-left-inner {
-	transform: translate3d(100%, 0, 0);
-	opacity: 0;
-	transition: all .5s linear .5s;
-	position: relative;
-}
-
-.is-content-visible .content-right-inner,
-.is-content-visible .content-left-inner {
-	transform: translate3d(0, 0, 0);
-	opacity: 1;
-}
