--- a/src/css/components/_section-title.scss
+++ b/src/css/components/_section-title.scss
@@ -5,7 +5,14 @@
 		font-weight: 300;
 		letter-spacing: 3px;
 		text-align: center;
-		color: $btnBg;
+		color: #fff;
+		margin-right: 0;
+		margin-bottom: 40px;
+
+		@include mq(medium) {
+			margin-right: 20%;
+			margin-bottom: 10px;
+		}
 	}
 }
 
