--- a/src/css/components/_venue.scss
+++ b/src/css/components/_venue.scss
@@ -1,56 +1,182 @@
-.venue-scene {
-	perspective: 400px;
+@keyframes Flip {
+	0% {
+		transform: rotateY(0deg);
+	}
+
+	100% {
+		transform: rotateY(360deg);
+	}
+
+}
+
+#venues {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
+	padding: 0 15px;
+	width: 100%; 
+
+	@include mq(small) {
+		padding: 0 30px;
+	}
+
+	@include mq(medium) {
+		width: 80%;
+		padding: 0;
+	}
 }
 
-
-.venue-shape {
-	cursor: pointer;
+.venue-container {
+	cursor:pointer;
+	justify-content: center;
+	display: flex;
+	flex-flow: column nowrap;
+	margin: 10px auto;
+	perspective: 500px;
 	position: relative;
+	width: 220px;
+	height: 150px;
+	
+
+	@include mq(xxsmall) {
+		width: 290px;
+		height: 180px;
+	}
+
+	@include mq(medium) {
+		margin: 20px auto;
+		width: 400px;
+		height: 230px;
+	}
+
+}
+
+.venue {
+	cursor:pointer;
+	position: absolute;
 	transform-style: preserve-3d;
-	transform: translateZ(-100px);
-	width: 200px;
-	height: 200px;
+	width: 220px;
+	height: 150px;
+	
 
-	&--face {
+	@include mq(xxsmall) {
+		width: 290px;
+		height: 180px;
+	}
+
+	@include mq(medium) {
+		width: 400px;
+		height: 230px;
+	}
+	
+	&-face {
+		display: flex;
+		flex-flow: column nowrap;
+		align-items: center;
+		justify-content: center;
 		position: absolute;
-		width: 200px;
-		height: 200px;
-		color: $textColor;
+		background-color: $venueBg;
+		backface-visibility: hidden;
+		box-shadow: 0 0 30px 0px $venueShadow inset;
+		margin: 10px auto;
+		padding: 15px;
+		color: #fff;
 		text-align: center;
-		transform-origin: 0% 50%;
-		transition: all .7s linear;
-		clip-path: polygon(0 0, 100% 5%, 100% 95%, 0% 100%);
-	}
+		transition: all .8s cubic-bezier(0, .24, .68, .98);
+		clip-path: polygon(0% 7%, 7% 7%, 7% 0%, 93% 0%, 93% 7%, 100% 7%, 100% 93%, 93% 93%, 93% 100%, 7% 100%, 7% 93%, 0% 93%);
+		width: 220px;
+		height: 150px;
+	
 
-	&--face---front {
-		background-color: rgba(255, 255, 255, .4);
-		//transform: rotateX(0) rotateY(25deg) translateZ(130px);
-		transform:  translateZ(130px);
-	}
+		@include mq(xxsmall) {
+			width: 290px;
+			height: 180px;
+		}
 
-	&--face---back {
-		background-color: rgba(255, 255, 255, .2);
-		//transform: rotateX(0) rotateY(25deg) translateZ(100px);
-		transform:  translateZ(100px);
-	}
+		@include mq(medium) {
+		width: 400px;
+		height: 230px;
+		}
 
+			&::after {
+				@include pseudo;
+				background-color: rgba(255,255,255,.2);
+				background-image: url(../images/icons/search_48px.svg);
+				background-repeat: no-repeat;
+				background-position: 50% 50%;
+				background-size: 64px;
+				mix-blend-mode: soft-light;
+				opacity:0;
+				transform:scale(1.5);
+				transition: all .8s cubic-bezier(0, .24, .68, .98);
+
+			}
+
+
+			&--front {
+				transform: rotateY(0deg) translateZ(0);
+
+				&---inner {
+					position: relative;
+					width: 90%;
+
+					&::after {
+						@include pseudo($top: -10px,$height: 10px);
+						background: repeating-linear-gradient(180deg,$venueShadow 0%, $venueShadow 5%, transparent 5%, transparent 50%, $venueShadow 50%, $venueShadow 55%, transparent 55%, transparent 95%, $venueShadow 95%, $venueShadow 100%);
+
+					}
+				}
+			}
+
+			&--back {
+				transform: rotateY(180deg) translateZ(-50px);
+
+				&---inner {
+					position: relative;
+					width: 90%;
+					transform: scale(0);
+					transition: all .6s cubic-bezier(0, .24, .68, .98) .5s;
+
+					&::after {
+						@include pseudo($top:null,$height: 10px);
+						bottom:-10px;
+						background: repeating-linear-gradient(180deg,$venueShadow 0%, $venueShadow 5%, transparent 5%, transparent 50%, $venueShadow 50%, $venueShadow 55%, transparent 55%, transparent 95%, $venueShadow 95%, $venueShadow 100%);
+
+					}
+				}
+			}
+
+
+		}
+
+	&.venue--flipped {
+		.venue-face--front {
+			transform: rotateY(180deg) translateZ(-50px);
+		}
+
+		.venue-face--back {
+			transform: rotateY(360deg) translateZ(0);
+			backface-visibility: visible;
+
+			&---inner {
+				transform: scale(1);
+			}
+		}
+	}
 
 	&:hover {
-	.venue-shape--face---front {
-		//transform: rotateY(25deg) translateZ(160px);
-		transform: translateZ(160px);
+		.venue-face::after {
+			opacity:1;
+			transform: scale(1);
+		}
 	}
-
-	.venue-shape--face---back {
-		//transform: rotateY(25deg) translateZ(50px);
-		transform:  translateZ(50px);
-	}
+  
 }
 
-}
+
+
+
+
 
 
 
