--- a/src/css/partials/_base.scss
+++ b/src/css/partials/_base.scss
@@ -9,10 +9,16 @@
 
 body {
 	margin: 0;
+	overflow-x: hidden;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: $fontHeading;
+	font-weight: 300;
+	margin: 8px 0;
 }
 
 h1 {
-	font-family: $fontHeading;
 	font-size: $fontSize * 2;
 	font-weight: 300;
 	letter-spacing: 1px;
@@ -42,10 +48,15 @@ p {
 	text-align: center;
 	color: $textColor;
 	padding-left: 5px;
+	margin: 5px 0;
 }
 
 a {
 	text-decoration: none;
+}
+
+a:focus, a:active {
+	outline: none;
 }
 
 img {
