--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Work+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Great+Vibes|Wire+One');
+
 
 @import 'partials/variables';
 @import 'partials/mixins';
@@ -11,6 +13,8 @@
 @import 'components/content';
 @import 'components/section-title';
 @import 'components/venue';
+@import 'components/weather';
+@import 'components/svg-images';
 
 
 
