--- a/src/css/partials/_mixins.scss
+++ b/src/css/partials/_mixins.scss
@@ -10,12 +10,23 @@
 
 @mixin mq($breakpoint) { 
   @if map-has-key($breakpoints, $breakpoint) {
-    @media (min-width: #{map-get($breakpoints, $breakpoint)}) {
+    @media (min-width: #{map-get($breakpoints, $breakpoint)}) and (-webkit-min-device-pixel-ratio: 1) {
       @content;
     }
   }
   @else {
     @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. " + "Please make sure it is defined in `$breakpoints` map.";
+  }
+}
+
+@mixin mqhr($hrbreakpoint) { 
+  @if map-has-key($hrbreakpoints, $hrbreakpoint) {
+    @media (min-width: #{map-get($hrbreakpoints, $hrbreakpoint)}) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi)  {
+      @content;
+    }
+  }
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$hrbreakpoint}`. " + "Please make sure it is defined in `$breakpoints` map.";
   }
 }
 
