--- a/src/css/components/_content.scss
+++ b/src/css/components/_content.scss
@@ -13,7 +13,6 @@
 
 	&-left {
 		background: linear-gradient(to bottom, #873140 0%, #772838 100%);
-
 		height: 100%;
 		transform: scale(2.5);
 		position: relative;
@@ -26,7 +25,20 @@
 		@include mq(medium) {
 			background: none;
 			width: 40%;
-		}	
+		}
+
+		@include mqhr(small) {
+			background: -webkit-linear-gradient(#873140 0%, #772838 100%);
+			background: -o-linear-gradient(#873140 0%, #772838 100%);
+			background: linear-gradient(#873140 0%, #772838 100%);
+			width: 0;
+		}
+		
+		@include mqlhr(small) {
+			background: linear-gradient(#873140 0%, #772838 100%);
+			width: 0;
+		}
+
 
 	}
 
@@ -44,8 +56,17 @@
 
 		@include mq(medium) {
 			width: 60%;
-			clip-path: circle(100% at 0% 50%);
 			clip-path: ellipse(100% 65% at 0% 50%);
+		}
+
+		@include mqhr(small) {
+			clip-path: none;
+			width: 100%;
+		}
+		
+		@include mqlhr(small) {
+			clip-path: none;
+			width: 100%;
 		}
 
 	}
@@ -86,6 +107,14 @@
 				clip-path: ellipse(100% 65% at 0% 50%);
 			}
 
+			@include mqhr(small) {
+			    clip-path: none;
+			}
+
+			@include mqlhr(small) {
+			    clip-path: none;
+			}
+
 		}
 
 		.content-left-inner,
@@ -105,6 +134,14 @@
 				clip-path: ellipse(100% 75% at 0% 50%);
 			}
 
+			@include mqhr(small) {
+			    clip-path: none;
+			}
+
+			@include mqlhr(small) {
+			    clip-path: none;
+			}
+
 		}
 
 		.content-left {
@@ -114,6 +151,16 @@
 				background: none;
 				width: 20%;
 			}
+
+			@include mqhr(small) {
+				background: linear-gradient(to bottom, #873140 0%, #772838 100%);
+			   width: 100%;
+			}
+
+			@include mqlhr(small) {
+				background: linear-gradient(to bottom, #873140 0%, #772838 100%);
+			   width: 100%;
+			}
 		}
 
 
@@ -121,16 +168,51 @@
 
 	h2 {
 		font-size: 22px;
+		font-weight: 300;
 		line-height: 1.2;
 		padding: 5px;
 		font-family: 'Great Vibes', cursive;
 
+		@include mqhr(small) {
+			font-size: $fontSize * 4;
+		}
+
+		@include mqlhr(small) {
+			font-size: $fontSize * 4;
+		}
+
+		@include mqlhr(lmedium) {
+			font-size: $fontSize * 2;
+		}
+
+
+		@include mqlhr(xlarge) {
+			font-size: $fontSize * 2.7;
+		}
+
 	}
 
-	h3, h2, p, span {
+	h3, p, span {
 		color: #eee;
-		font-size: 16px;
+		font-size: $fontSize;
 		font-weight: 300;
+
+		@include mqhr(small) {
+			font-size: $fontSize * 2.7;
+		}
+
+		@include mqlhr(small) {
+			font-size: $fontSize * 2.7;
+		}
+
+		@include mqlhr(lmedium) {
+			font-size: $fontSize * 1.5;
+		}
+
+
+		@include mqlhr(xlarge) {
+			font-size: $fontSize * 2.7;
+		}
 	}
 
 	p {
@@ -141,11 +223,31 @@
 		display: block;
 		width: 60px;
 		height: 60px;
+
+		@include mqhr(small) {
+			width: 120px;
+			height: 120px;
+		}
+
+		@include mqlhr(small) {
+			width: 120px;
+			height: 120px;
+		}
 	}
 
 	.cloud-pair {
 		width: 120px;
 		height: 120px;
+
+		@include mqhr(small) {
+			width: 240px;
+			height: 240px;
+		}
+
+		@include mqlhr(small) {
+			width: 240px;
+			height: 240px;
+		}
 	}
 
 	#cloud, #cloud-pair, #air-balloon {
@@ -163,6 +265,20 @@
 		@include randomPosition(cloud);
 		@include randomPosition(cloud-pair);
 		@include randomPosition(air-balloon);
+
+
+		@include mqhr(small) {
+			@include randomShapeSize2HR(cloud);
+			@include randomShapeSize2HR(cloud-pair);
+			@include randomShapeSize2HR(air-balloon);
+		}
+
+		@include mqlhr(small) {
+			@include randomShapeSize2HR(cloud);
+			@include randomShapeSize2HR(cloud-pair);
+			@include randomShapeSize2HR(air-balloon);
+		}
+
 			
 	}
 
@@ -179,7 +295,20 @@
 		@include randomPosition(cloud-pair);
 		@include randomPosition(air-balloon);
 
+		@include mqhr(small) {
+			@include randomShapeSize2HR(cloud);
+			@include randomShapeSize2HR(cloud-pair);
+			@include randomShapeSize2HR(air-balloon);
+		}
+
+		@include mqlhr(small) {
+			@include randomShapeSize2HR(cloud);
+			@include randomShapeSize2HR(cloud-pair);
+			@include randomShapeSize2HR(air-balloon);
+		}
+
 	}
+	
 }
 
 
