--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,7 +14,7 @@
 @import 'components/section-title';
 @import 'components/venue';
 @import 'components/weather';
-@import 'components/svg-images';
+@import 'components/attractions';
 
 
 
