--- a/src/css/components/_section-title.scss
+++ b/src/css/components/_section-title.scss
@@ -13,7 +13,17 @@
 			margin-right: 20%;
 			margin-bottom: 10px;
 		}
-	}
+		
+		@include mqhr(small) {
+		    margin-right: 0;
+		    margin-bottom: 40px;
+		}
+
+		@include mqlhr(small) {
+		    margin-right: 0;
+		    margin-bottom: 40px;
+		}
+			}
 }
 
 
